--- a/templates/predict.html
+++ b/templates/predict.html
@@ -2,13 +2,23 @@
 
 <head>
     <style>
+        table {
+            border-collapse: collapse;
+        }
 
+        td, th {
+            border: 1px solid black;
+            padding: 0.5rem;
+        }
+
+        th {
+            background-color: #ddd;
+        }
     </style>
 </head>
 
 <body>
-    <title>House Price Predictor</title>
-    <h1>Freya MacBean</h1>
+    <title>House Price Predictor - Freya MacBean (u3241255)</title>
 
     <div>
         <h2>Input parameters</h2>
